--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 a library to make C++ as convenient as Python :)
 
-https://github.com/LenxWei/libproton
+homepage:   http://code.google.com/p/libproton/
+  github:   https://github.com/LenxWei/libproton
+     doc:   http://proton.100871.net
