--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 a library to make C++ as convenient as Python :)
 
-homepage:   http://code.google.com/p/libproton/
+download:   http://code.google.com/p/libproton/downloads/list
   github:   https://github.com/LenxWei/libproton
      doc:   http://proton.100871.net
